# ChangeLog for games-board/pysolfc
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/games-board/pysolfc/ChangeLog,v 1.20 2014/06/14 10:15:29 phajdan.jr Exp $

  14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> pysolfc-2.0-r3.ebuild:
  x86 stable wrt bug #510776

  10 Jun 2014; Mike Gilbert <floppym@gentoo.org> -pysolfc-2.0-r1.ebuild:
  Remove old.

*pysolfc-2.0-r3 (07 Apr 2014)

  07 Apr 2014; Tupone Alfredo <tupone@gentoo.org> +pysolfc-2.0-r3.ebuild,
  +files/pysolfc-2.0-gentoo.patch:
  Relying on new python-exec Fix bug #504352 by mgorny

  24 Dec 2013; Agostino Sarubbo <ago@gentoo.org> pysolfc-2.0-r2.ebuild:
  Stable for x86, wrt bug #490610

  01 Dec 2013; Chema Alonso <nimiux@gentoo.org> pysolfc-2.0-r2.ebuild:
  Stable for amd64 wrt bug #490610

  30 Nov 2013; Julian Ospald <hasufell@gentoo.org> pysolfc-2.0-r2.ebuild:
  add dev-lang/python-exec:0 do build-time deps as well

  30 Nov 2013; Julian Ospald <hasufell@gentoo.org> pysolfc-2.0-r2.ebuild:
  restrict to dev-lang/python-exec:0 because dev-lang/python-exec:2 is broken
  wrt #489646

  22 Nov 2013; Michael Sterrett <mr_bones_@gentoo.org> pysolfc-2.0-r2.ebuild:
  just use dev-python/pillow

  28 Oct 2013; Julian Ospald <hasufell@gentoo.org> pysolfc-2.0-r2.ebuild:
  respect GAMES variables wrt #489694

*pysolfc-2.0-r2 (23 Jun 2013)

  23 Jun 2013; Mike Gilbert <floppym@gentoo.org>
  +files/pysolfc-PIL-imports.patch, +pysolfc-2.0-r2.ebuild:
  Update PIL imports and depend on virtual/python-imaging, bug 471514.

  10 Jun 2013; Michael Sterrett <mr_bones_@gentoo.org> -pysolfc-2.0.ebuild:
  old

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pysolfc-2.0-r1.ebuild:
  Stable for x86, wrt bug #457110

  14 Feb 2013; Agostino Sarubbo <ago@gentoo.org> pysolfc-2.0-r1.ebuild:
  Stable for amd64, wrt bug #457110

  12 Jan 2013; Julian Ospald <hasufell@gentoo.org> pysolfc-2.0-r1.ebuild:
  remove inherit magic and call functions explicitly
