@@ -6,23 +6,17 @@ AUX pysolfc-PIL-imports.patch 1693 SHA256 5a65b6f830fa486ea1c2f70f60a45e088ad845
 DIST PySolFC-2.0.tar.bz2 4208776 SHA256 dbcb8e7e6d0479c230745a2be91c0c9b9e8524407cd2075f2dae144e5d441b6c SHA512 ec5a11565bd43e097cf1854fe246b8f92acd74077c0b3b158c999f9dc45966e8f805c60a2cfbd815137d970e0e6409d0ae437b9807bac9c39353657cf596b6fc WHIRLPOOL 468d595ee1ae0a3a0129f9e822f9985cd0c7c9a00766dc711a5b8d202742bdd26393a676bc7515e39e1ddad71a3ef65d3d27ada0ec339212662126a42a07ad8c
 DIST PySolFC-Cardsets-2.0.tar.bz2 30687905 SHA256 c388d6360191b3b7e463d84e5a64260c4e3ed36e791a85227d7e8923f3f47ca7 SHA512 24275cd3656024e268a49487ac75e1e67e61ec20e0a9f88e2d1c287f91314a1a9343856d1202ce468f8863f4e9a9bf27526fbb1979a7d765718b38e64ca0cfc8 WHIRLPOOL ae779f1838d321e727c0661980c7f40ff368aa958a3fd1043448229d5b2a56ce94799f343b8527666081b043a469760f7f3b0a3e2d58263d69c16cb3456d7df5
 EBUILD pysolfc-2.0-r2.ebuild 2017 SHA256 65296b7433e990309b8f2a8d815597335a4b83b2c0de4a085606b0086e278972 SHA512 b4c9a3082bde7c44895e8f1f49ed4254acd6c6eef9953f0093cebb0032c84b4b4f21a5e2ef379c240ba26db062dfd52710f6093577f1bcbf172d33c51ca025f5 WHIRLPOOL a3d5bb042c5ae13b0c18f8e21432eb80ddc4d5b46b62c05b99752d9b2f312fe5e7f711469cf70d535c596b8ab7c1b1c7d9ca416421e51fbf220b430a9d2954e3
-EBUILD pysolfc-2.0-r3.ebuild 2010 SHA256 6d394277f61450013db13832b73405c3dcbbdb6b491d39689c25bf391614aef4 SHA512 50498013ee914e9c740b83af98134adfde39fa96fd1ee184bd2f6546b27e1f79580237a0bad543e43d340081ab5cf364402d31d542825183e6854edaeee3df67 WHIRLPOOL c69eea9eab0064bdd3e3526e0a88e25fd7cd9aea700d94b87a4374dbfcb60b8e06cba749ac137513e492999c508854aba1b9d6c01b7cc647f30ce8a3f5906cfc
-MISC ChangeLog 2831 SHA256 be6750019c2e35089d1c1fd6fb2dc0e0ec6e4cc4664a221a291ceac65bd930f2 SHA512 d104a2b830e5485781dc9f2658902a3ea2b83676475409d328a0a76b034013c5af6dc2c731cbedde72f162653f48d0254f7b618e916d9c5777172db639c48c10 WHIRLPOOL ea89d5144f07e23de2f7300158da68c18841fa6a5047bc12cb04fb7242d1aca80c90121e0dd28e93bf12794ec276e26685438862defe036078f9e642381fb5e6
+EBUILD pysolfc-2.0-r3.ebuild 2005 SHA256 7139f0f930fad729045062affeeca375ca654d3789fad613a3869dd9e14007de SHA512 71943cc9cfdc93c562a591d749dbf57abfb7387632ffcd087d945dce784851a2fc7b3e56e85c0374e5ad7538a71e518deda7391ff27f1c67b4bb18176b7bea32 WHIRLPOOL 8f59232de08a8c370c111e01c78a7a8c533e4c278a83c50b172889ce16a8593130b622a006d5d1f062d7d276c583e851b25e8acb83156edfe2aabc43af545d7b
+MISC ChangeLog 2934 SHA256 2861438cf741320810fdb2ecdc9f1a362d0f56896f4ed59276f94a0f8b94c215 SHA512 f5e1baccca2e3d561b78c19642e7e7a4dfc82e8fc3792e3d15f1fe7a92e78deacb01294551ac72e2b72aa924f32c4d24797bca7d4f839025bef4c18182828bf2 WHIRLPOOL 0568a2b141e4651c839f3e5adf4153796b3decde81437e61749de811916a0ffd3cd3daf86f03cfb9fe0761b049a18219942edd395fbb359dd2123b42a6ae49c9
 MISC metadata.xml 322 SHA256 5b8f03faf13d94e9bf017c1efa855dda0e0518b2d81b08df1027fb73142ad2d2 SHA512 032916f3e85f249445c0f5e9f005c0dc6e9b7263f1914cd3feb441536ec123435ae482bc7805827cc9c67c830a2e0fd239b0d014a365137bfe08049de7823270 WHIRLPOOL 444bbd40c624955a7014df915987824afe214949dae9ed85af2fbc39e66fb3739b52e3f15bc64c5b9d2dc1ed2b26a6abd3797fd9603727585e383fbe0e608c9d
 -----BEGIN PGP SIGNATURE-----
-Version: GnuPG v2.0.22 (GNU/Linux)
+Version: GnuPG v2
 
-iQIcBAEBCAAGBQJTnCDCAAoJEE8aJVXqcZkdpucQAILVoZBoeTCrX8aRxlX0gbb+
-EfHkplvtSOa/wbQeiew5z28WKKIz3zcVF91pPiHCr9CKYUh8Mn/qbUiMhpg8eo4Y
-FMjFnwRDV+X6cKbnJaoNb3U7whKjKmYwYTNTu9USTas9mfJr84+8pXbZAQSvFt0B
-sXJ3LUrL6I7mr0FGe+HFdbdj/Oza+ofQ9sCsbGzEkEeuLzcb5Ou6T24T2WpwEb/w
-Nw8eZ/vnPxZz8RxHuHvyG9s+nhJBpqcrEQqYrJOsFTW7Gom9+89VtlXJn6oe8ABS
-ZszLqGqWP4215R1t7Xj5LHZ/9ssEDBkXzHF814WlvS4vASXN12zT9pCSdc9VgcTO
-C1EBzhz+ydKhs+lq71sE2f1YoozpVpr8dZKHTSrXjwFHnbNNZ9N4j1kOEdPWSrv1
-uxlk14ePXRcUDobgHZN90e5WM+yacL6jvlx5rLMIQS0FTqVj8RLsLoUOzJEI0fTG
-l+JsBRXJNZ259anT9tpRcsFIcvsvSRTfRhW5lFxm9Xh0lMbBHDqvCBRyKrB0+DNh
-UDzRmPPU2F2qmYRHUtkMiNxmpgMt93zV6/RSUXAHNG49z97B5Lr3KacTft8E4gjo
-yv8t557PcVBdb/gT9A8CaYiR0uP4SlwxWCGxIi3+g2vriGzxmAMsirVY5hP+KiOt
-wGNHuKRwWhPQ6KV8Sy+a
-=MFMH
+iQEcBAEBCAAGBQJTvCEzAAoJEA2sAkrWKOU2N2QH/1AHTcHCawHMQ/BdhRejUlfU
+6rUDoaYmhuwYfVM1oYwo876hxQ7Vy/XMc7t5GGpGGsrQdvNc8CXGhe+//aPwOcEo
+ZGaJ+bg7IJYFYZrWDhVoQl+6b9bMP26uCJlKvtSnzhH0tKiv5UykgFwdE7edzSfP
+NZokR2qedMA8asJtpzuyTKGG1Z/jVylUqeZn4cPknqmgD/K4MCPzdEh9vYu3OxkY
+w+GYWzX5iruZpJ+UHDDGCuRNeEN8Q/z/ScaFynwAgDdTZNXZXdoIZSrY4U8axG7C
+u8yn8zat9yE+xALfUykJOvD4NqFpxcDxUZQTYFh9O1ZFFjqF+Izs5H74KoP3GEQ=
+=nUF1
 -----END PGP SIGNATURE-----
