@@ -4,11 +4,11 @@ DESCRIPTION=An exciting collection of more than 1000 solitaire card games
 EAPI=5
 HOMEPAGE=http://pysolfc.sourceforge.net/
 IUSE=extra-cardsets minimal +sound python_targets_python2_7 python_single_target_python2_7
-KEYWORDS=~amd64 x86
+KEYWORDS=amd64 x86
 LICENSE=GPL-3
 RDEPEND=sound? ( dev-python/pygame[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] ) !minimal? ( dev-python/pillow[tk,python_targets_python2_7(-)?,python_single_target_python2_7(+)?] dev-tcltk/tktable ) python_single_target_python2_7? ( >=dev-lang/python-2.7.5-r2:2.7[tk] ) dev-lang/python-exec:=[python_targets_python2_7(-)?,python_single_target_python2_7(+)?] games-misc/games-envd
 REQUIRED_USE=python_single_target_python2_7? ( python_targets_python2_7 ) ^^ ( python_single_target_python2_7 )
 SLOT=0
 SRC_URI=mirror://sourceforge/pysolfc/PySolFC-2.0.tar.bz2 extra-cardsets? ( mirror://sourceforge/pysolfc/PySolFC-Cardsets-2.0.tar.bz2 )
 _eclasses_=base	ec46b36a6f6fd1d0b505a33e0b74e413	distutils-r1	d48d51c220f1678179fc4ab13b534ec1	eutils	76fc3c462065bb4ca959f939e6793f94	games	016d5de1968de77e56a90938ed6e5aba	multilib	fac675dcccf94392371a6abee62d909f	python-single-r1	a71a169a881e0a11d04a7fe12dc39f6e	python-utils-r1	8c66c6dabd0295878b68b40dbd0b087b	toolchain-funcs	48b38a216afb92db6314d6c3187abea3	user	1a9ecf501027961855b0320e8915a79c
-_md5_=3a3c54aed3636659b1c193cc7bca3a63
+_md5_=32af53e37a19a3c019ada70b4928065d
