@@ -1,6 +1,9 @@
 # ChangeLog for sys-apps/systemd
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.280 2014/07/05 13:56:23 ago Exp $
+# $Header: /var/cvsroot/gentoo-x86/sys-apps/systemd/ChangeLog,v 1.281 2014/07/08 17:01:13 floppym Exp $
+
+  08 Jul 2014; Mike Gilbert <floppym@gentoo.org> systemd-9999.ebuild:
+  Don't disable gcrypt and xz support for non-native abis, bug 516702.
 
   05 Jul 2014; Agostino Sarubbo <ago@gentoo.org> systemd-212-r5.ebuild:
   Stable for x86, wrt bug #509076
