@@ -1,6 +1,9 @@
 # ChangeLog for games-board/pysolfc
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/games-board/pysolfc/ChangeLog,v 1.20 2014/06/14 10:15:29 phajdan.jr Exp $
+# $Header: /var/cvsroot/gentoo-x86/games-board/pysolfc/ChangeLog,v 1.21 2014/07/08 16:48:48 nimiux Exp $
+
+  08 Jul 2014; Chema Alonso <nimiux@gentoo.org> pysolfc-2.0-r3.ebuild:
+  Stable for amd64 wrt bug #510776
 
   14 Jun 2014; Pawel Hajdan jr <phajdan.jr@gentoo.org> pysolfc-2.0-r3.ebuild:
   x86 stable wrt bug #510776
